--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Michela Mulas home page
+<html>
+  <head>
+    <title>Michela Mulas</title>
+    <style type="text/css">
+    <!--
+      a:link { text-decoration:none; color:#0000ff }
+      a:visited { text-decoration:none; color:#0000ff }
+      a:hover { text-decoration:underline }
+      a:active { text-decoration:none }
+      li{margin-bottom:10px;}
+    -->
+    </style>
+  </head>
