--- a/index.html
+++ b/index.html
@@ -11,3 +11,64 @@
     -->
     </style>
   </head>
+  
+  <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+	
+	<!-- Animate.css -->
+	<link rel="stylesheet" href="css/animate.css">
+	<!-- Icomoon Icon Fonts-->
+	<link rel="stylesheet" href="css/icomoon.css">
+	<!-- Themify Icons-->
+	<link rel="stylesheet" href="css/themify-icons.css">
+	<!-- Bootstrap  -->
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<!-- Theme style  -->
+	<link rel="stylesheet" href="css/style.css">
+
+	<!-- Modernizr JS -->
+	<script src="js/modernizr-2.6.2.min.js"></script>
+	<!-- FOR IE9 below -->
+	<!--[if lt IE 9]>
+	<script src="js/respond.min.js"></script>
+	<![endif]-->
+
+	</head>
+	<body>
+		
+	<div class="gtco-loader"></div>
+	
+	<div id="page">
+
+		<nav class="gtco-nav" role="navigation">
+			<div class="container">
+				
+				<div class="row">
+					<div class="col-sm-2 col-xs-2">
+						<div id="gtco-logo"><a href="index.html">Motion<sup>&trade;</sup></div>
+					</div>
+					<div class="col-xs-10 text-right fh5co-top-social">
+						<ul class="gtco-social">
+							<li><a href="#" class="icon-twitter"></i></a></li>
+							<li><a href="#" class="icon-dribbble"></i></a></li>
+							<li><a href="#" class="icon-instagram"></i></a></li>
+						</ul>
+					</div>
+				</div>
+				
+			</div>
+		</nav>
+		
+		<div id="gtco-intro">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-10 col-md-offset-1 text-center">
+						<div class="dt js-height">
+							<div class="dtc animate-box">
+								<h2 class="gradient-text">We are an award winning web design studio based in Philippines.</h2>
+								<p><a href="#" class="btn btn-gradient">Hire Us</a></p>
+							</div>	
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
