--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
     </style>
   </head>
   
-  <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+  <!-- Facebook and Twitter integration -->
+<meta property="og:title" content=""/>
+<meta property="og:image" content=""/>
+<meta property="og:url" content=""/>
+<meta property="og:site_name" content=""/>
+<meta property="og:description" content=""/>
+<meta name="twitter:title" content="" />
+<meta name="twitter:image" content="" />
+<meta name="twitter:url" content="" />
+<meta name="twitter:card" content="" />
+	
+<link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
 	
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -64,8 +75,7 @@
 					<div class="col-md-10 col-md-offset-1 text-center">
 						<div class="dt js-height">
 							<div class="dtc animate-box">
-								<h2 class="gradient-text">We are an award winning web design studio based in Philippines.</h2>
-								<p><a href="#" class="btn btn-gradient">Hire Us</a></p>
+								<h2 class="gradient-text"> I am volunteering in Brazil.</h2>
 							</div>	
 						</div>
 					</div>
