--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
   </head>
 
-<h1>Pure CSS Tabs <span>Just CSS, No JS!</span></h1>
+<h1>Michela Mulas </h1>
 <ul class="tabs" role="tablist">
     <li>
         <input type="radio" name="tabs" id="tab1" checked />
