--- a/index.html
+++ b/index.html
@@ -39,3 +39,5 @@
 </ul>
 
 <br style="clear: both;" />
+  
+ <p class="link">See the <a href="https://codepen.io/wallaceerick/pen/IGxim">3D Box</a> demo!</p>
