--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Michela Mulas</title>
+    <link href="./index.css" rel="stylesheet" type="text/css"/>
   </head>
 
 <h1>Michela Mulas </h1>
