--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="./index.css" rel="stylesheet" type="text/css"/>
   </head>
 
-<h1>Michela Mulas </h1>
+<h1> Duba </h1>
 <ul class="tabs" role="tablist">
     <li>
         <input type="radio" name="tabs" id="tab1" checked />
