--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Michela Mulas</title>
-    <link href="./index.scss" rel="stylesheet" type="text/css"/>
+    <link href="./index.scss" type="text/css"/>
   </head>
 
 <h1> Dubaduba </h1>
