--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="index.scss" type="text/css"/>
   </head>
 
-<h1> Dubaduba </h1>
+<h1> Dubadubatriba </h1>
 <ul class="tabs" role="tablist">
     <li>
         <input type="radio" name="tabs" id="tab1" checked />
