--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
   <head>
     <title>Michela Mulas</title>
-    <link href="index.scss" type="text/css"/>
   </head>
+
+<link rel="stylesheet" href="css/main.css">
 
 <h1> Dubadubatriba </h1>
 <ul class="tabs" role="tablist">
