--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 	
 </head>
 
-
-<h1> Dubadubatriba </h1>
+<h1> AiutoGiggi </h1>
 <ul class="tabs" role="tablist">
     <li>
         <input type="radio" name="tabs" id="tab1" checked />
