--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet'>
 	
 	<!-- Main CSS-->
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/main.scss">
 	
 </head>
 
