--- a/index.html
+++ b/index.html
@@ -1,18 +1,8 @@
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>Personal</title>
-	<meta name="description" content="">
-	<!-- Mobile Specific Meta -->
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<!-- <link rel="shortcut icon" href="img/favicon.png"> -->
-	
-	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet'>
-	
-	<!-- Main CSS-->
-	<link rel="stylesheet" href="css/main.scss">
-	
+ <title>Michela Mulas</title>
+ <!-- Main CSS-->
+ <link rel="stylesheet" href="css/main.scss">	
 </head>
 
 <h1> AiutoGiggi </h1>
