--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	
 </head>
 
-<body id="welcome">
+<body id="About me">
 	
 	<aside class="left-sidebar">
 		<div class="logo">
@@ -37,15 +37,12 @@
 		</div>
 		<nav class="left-nav">
 			<ul id="nav">
-				<li class="current"><a href="#welcome">Welcome</a></li>
-				<li><a href="#installation">Installation</a></li>
-				<li><a href="#tmpl-structure">Structure</a></li>
-				<li><a href="#css-structure">CSS Files</a></li>
-				<li><a href="#javascript">JavaScript Libraries</a></li>
-				<li><a href="#contact-form">Contact Form</a></li>
-				<li><a href="#subscription-form">Subscription Form</a></li>
-				<li><a href="#video">Video Tutorial</a></li>
-				<li><a href="#credit">Source and Credit</a></li>
+				<li class="current"><a href="#welcome">About me</a></li>
+				<li><a href="#installation">Teaching</a></li>
+				<li><a href="#tmpl-structure">Research</a></li>
+				<li><a href="#css-structure">Projects</a></li>
+				<li><a href="#javascript">Publications</a></li>
+				<li><a href="#contact-form">Positions</a></li>
 			</ul>
 		</nav>
 	</aside>
@@ -54,11 +51,11 @@
 		<div class="main-content">
 			<section id="welcome">
 				<div class="content-header">
-					<h1>Personal Html5 Responsive Template</h1>
+					<h1> Michela Mulas</h1>
 				</div>
-				<div class="welcome">
+				<div class="About me">
 					
-					<h2 class="twenty">Welcome To Personal Html5 Responsive Template</h2>
+					<h2 class="twenty"> About me</h2>
 					<p>Firstly, a huge thanks for purchasing this theme, your support is truly appreciated!</p>
 					<p>This document covers the installation and use of this theme and often reveals answers to common problems and issues - read this document thoroughly if you are experiencing any difficulties. If you have any questions that are beyond the scope of this document, feel free to email at <code><a href="mailto:support@colorlib.com">support@colorlib.com</a></code> Thank you so much!</p>
 				</div>
