--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<nav class="left-nav">
 			<ul id="nav">
 				<li class="current"><a href="#welcome">About me</a></li>
-				<li><a href="#installation">Teaching</a></li>
+				<li><a href="#teaching">Teaching</a></li>
 				<li><a href="#tmpl-structure">Research</a></li>
 				<li><a href="#css-structure">Projects</a></li>
 				<li><a href="#javascript">Publications</a></li>
@@ -74,16 +74,16 @@
 				</div>
 			</section>
 			
-			<section id="installation">
+			<section id="teaching">
 				<div class="content-header">
-					<h1>Personal Html5 Responsive Template</h1>
+					<h1>Teaching</h1>
 				</div>
-				<h2 class="title">Installing Template.</h2>
+				<h2 class="title">Courses at Aalto University </h2>
 				
 				<div class="section-content">
 					<ol>
-						<li>After unzip the download pack, you'll found a Template Folder with all the files.</li>
-						<li>You can view this Template in any browser, you can display or edit the Template without an internet connection.(May not wotrk fonts and google map).</li>
+			       <li> After unzip the download pack, you'll found a Template Folder with all the files.</li>
+                               <li>You can view this Template in any browser, you can display or edit the Template without an internet connection.(May not wotrk fonts and google map).</li>
 						<li>The only section that will not work is the Contact Section which contains PHP code and requires a server environment for send messages.</li>
 						<li>Now go to your cpanel or open your FTP Client (like <a target="_blank" href="https://filezilla-project.org/download.php">Filezilla</a>) and upload the content of the Template on your server root.</li>
 						<li>Once the files are done uploading go to www.yourdomainname.com/index.html</li>
