--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
 </head>
 
 <body id="About me">
-	
 	<aside class="left-sidebar">
 		<div class="logo">
-			<a href="#welcome">
+			<a href="#aboutme">
 				<img src="img/logo.png" alt="">
 			</a>
 		</div>
