--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
 	<meta charset="utf-8">
-	<title>Personal</title>
+	<title>Michela Mulas </title>
 </head>
 </html>
