--- a/index.html
+++ b/index.html
@@ -25,17 +25,19 @@
 	
 </head>
 
-<body id="About me">
-	<aside class="left-sidebar">
-		<div class="logo">
-			<a href="#aboutme">
-				<img src="img/logo.png" alt="">
-			</a>
-		</div>
+<body id="welcome">
+
+<aside class="left-sidebar">
+<div class="logo">
+<a href="#welcome">
+<img src="img/logo.png" alt="">
+</a>
+</div>
+
 		<nav class="left-nav">
 			<ul id="nav">
 				<li class="current"><a href="#welcome">About me</a></li>
-				<li><a href="#teaching">Teaching</a></li>
+				<li><a href="#installation">Teaching</a></li>
 				<li><a href="#tmpl-structure">Research</a></li>
 				<li><a href="#css-structure">Projects</a></li>
 				<li><a href="#javascript">Publications</a></li>
