--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
 		<nav class="left-nav">
 			<ul id="nav">
 				<li class="current"><a href="#welcome">About me</a></li>
-				<li><a href="#installation">Teaching</a></li>
-				<li><a href="#tmpl-structure">Research</a></li>
-				<li><a href="#css-structure">Projects</a></li>
-				<li><a href="#javascript">Publications</a></li>
-				<li><a href="#contact-form">Positions</a></li>
+				<li><a href="#teaching">Teaching</a></li>
+				<li><a href="#research">Research</a></li>
+				<li><a href="#projects">Projects</a></li>
+				<li><a href="#publications">Publications</a></li>
+                <li><a href="#positions">Positions</a></li>
+				<li><a href="#contact-form">Contact</a></li>
 			</ul>
 		</nav>
 	</aside>
@@ -56,7 +57,7 @@
                 
 				<p> I received the Laurea degree (M.Sc.) in Chemical Engineering in 2001 and in 2006 the Dottorato di Ricerca (Ph.D, Eng) in Industrial Engineering from the University of Cagliari (Italy). In 2007, I joined the Helsinki University of Technology (now Aalto University) first as post-doctoral researcher in the Laboratory of Process Control and Automation at the Department of Chemical Engineering and then, in 2010, the Water Engineering Research Group at the Department of Civil and Environmental Engineering. In 2014, I joined the Department of Chemical Engineering at Federal University of Campina Grande as post-doctoral researcher under the program Bolsa Jovens Talentos - Ciência sem fronteiras funded by CAPES. Since 2016, I am a professor at the Federal University of Ceará at the Department of Teleinformatic Engineering. </p>
 
-<p> Her research interest focuses on model-based process control, soft-sensors and fault diagnosis theory, in general, and their application on wastewater treatment plants, in particular. She is member of the IFAC, International Federation of Automatic Control, Technical Committee 8.4 on Biosystems and Bioprocesses. </p>
+                <p> My research interests are on model-based process control, soft-sensors and fault diagnosis theory, in general, and their application on wastewater treatment plants, in particular. She is member of the IFAC, International Federation of Automatic Control, Technical Committee 8.4 on Biosystems and Bioprocesses. </p>
 				</div>
 </section>
   <section id="teaching">
