--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
@@ -72,7 +72,7 @@
   </ul>
  <div class="section-content">
    <ol>
-    <li> After unzip the download pack, you'll found a Template Folder with all the files.</li>
+    <li> After unzip the download pack, you found a Template Folder with all the files.</li>
      <li>You can view this Template in any browser, you can display or edit the Template without an internet connection.(May not wotrk fonts and google map).</li>
    <li>Once the files are done uploading go to www.yourdomainname.com/index.html</li>
    </ol>
