--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <div class="about">
   <p> I received the Laurea degree (M.Sc.) in Chemical Engineering in 2001 and in 2006 the Dottorato di Ricerca (Ph.D, Eng) in Industrial Engineering from the University of Cagliari (Italy). In 2007, I joined the Helsinki University of Technology (now Aalto University) first as post-doctoral researcher in the Laboratory of Process Control and Automation at the Department of Chemical Engineering and then, in 2010, the Water Engineering Research Group at the Department of Civil and Environmental Engineering. In 2014, I joined the Department of Chemical Engineering at Federal University of Campina Grande as post-doctoral researcher under the program Bolsa Jovens Talentos - Ciência sem fronteiras funded by CAPES. <p>
   <br>
-  <p> Since 2016, I is a professor at the Federal University of Ceará at the Department of Teleinformatic Engineering. My research interest focuses on model-based process control, soft-sensors and fault diagnosis theory, in general, and their application on wastewater treatment plants, in particular. She is member of the IFAC, International Federation of Automatic Control, Technical Committee 8.4 on Biosystems and Bioprocesses. <p>
+  <p> Since 2016, I am a professor at the Federal University of Ceará at the Department of Teleinformatic Engineering. My research interest focuses on model-based process control, soft-sensors and fault diagnosis theory, in general, and their application on wastewater treatment plants, in particular. She is member of the IFAC, International Federation of Automatic Control, Technical Committee 8.4 on Biosystems and Bioprocesses. <p>
 </div>
 
 <section id="teaching">
@@ -84,7 +84,7 @@
 
 <ul> [2011] Modelling and control of wastewater treatment plant (<a href="http://www.deq.ufcg.edu.br" target="_blank">Federal University of Campina Grande</a>, postgrad) </li> </ul>
 
-<ul> [2012] <a href="http://value.oulu.fi/files-edu/brochure-marsili.pdf" target="_blank">Environmental data modeling and analysis</a>. A 3-day intensive course  taught by Prof. <a href="https://www.unifi.it/p-doc2-2013-0-A-2b2d3c2d332b.html" target="_blank"> Stefano Marsili-Libelli</a> for water professionals and postgraduate students at Aalto </li> </ul>
+<ul> [2012] <a href="http://value.oulu.fi/files-edu/brochure-marsili.pdf" target="_blank">Environmental data modelling and analysis</a>. A 3-day intensive course  taught by Prof. <a href="https://www.unifi.it/p-doc2-2013-0-A-2b2d3c2d332b.html" target="_blank"> Stefano Marsili-Libelli</a> for water professionals and postgraduate students at Aalto </li> </ul>
 <ul> [2013] Modelling and control of wastewater treatment plant (<a href="https://people.unica.it/ingegneriachimica/" target="_blank">University of Cagliari</a>, postgrad) </li> </ul>
 <ul>
 </section>
@@ -97,7 +97,7 @@
     
 <div class="section-content">
     <ul> [2018 -> ] Control4Reuse: Process control technologies for water reuse (<a href="http://www.waterjpi.eu/joint-calls/joint-call-2017-ic4water/booklet/control4reuse-1" target="_blank">WaterJPI</a>; Sweden, France, Brazil)</ul>
-    <ul> [2015 -> ] Advanced process control for the optimal operation of wastewater treatment plants (Brasil, Finland) </ul>
+    <ul> [2015 -> ] Advanced process control for the optimal operation of wastewater treatment plants (Brazil, Finland) </ul>
     <ul> [2012 -> 2014] Diamond: Advanced data management and Informatics for the optimum operation and control of wastewater treatment plants (EU-FP7; Spain. Sweden, Finland) </ul>
     <ul> [2011 -> 2013] Comparative study of different control strategies for the activated sludge process at the Viikinmäki Wastewater Treatment Plant(HSY; Finland) </ul>
     <ul> [2011 -> 2014] Effective sewer condition management using real-time sensor information (TEKES; Finland, UK) </ul>
