--- a/index.html
+++ b/index.html
@@ -64,10 +64,14 @@
   <p> Since 2016, I am a professor at the Federal University of Ceará at the Department of Teleinformatic Engineering. My research interest focuses on model-based process control, soft-sensors and fault diagnosis theory, in general, and their application on wastewater treatment plants, in particular. She is member of the IFAC, International Federation of Automatic Control, Technical Committee 8.4 on Biosystems and Bioprocesses. <p>
 </div>
 
-<section id="teaching">
-<div class="content-header">
-  <h1>Teaching</h1>
-</div>
+<div id="main-wrapper">
+    <div class="main-content">
+        <section id="teaching">
+            <div class="content-header">
+                <h1>Teaching</h1>
+            </div>
+            <div class="teaching">
+                
 <h2 class="title">Teaching at Aalto and UFC </h2>
 <div class="section-content">
     <ul> [2016 -> ] <a href="https://mycourses.aalto.fi/course/view.php?id=22585" target="_blank">WAT-E2130:</a> Modelling and control of water and wastewater processes (Aalto, postgrad) </ul>
