--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
   <br>
   <p> Since 2016, I am a professor at the Federal University of Ceará at the Department of Teleinformatic Engineering. My research interest focuses on model-based process control, soft-sensors and fault diagnosis theory, in general, and their application on wastewater treatment plants, in particular. She is member of the IFAC, International Federation of Automatic Control, Technical Committee 8.4 on Biosystems and Bioprocesses. <p>
 </div>
+</div>
+</div>
+
+<div id="main-wrapper">
+    <div class="main-content">
 
 <section id="teaching">
 <div class="content-header">
@@ -87,13 +92,19 @@
 <ul> [2013] Modelling and control of wastewater treatment plant (<a href="https://people.unica.it/ingegneriachimica/" target="_blank">University of Cagliari</a>, postgrad) </li> </ul>
 <ul>
 </section>
+</div>
+</div>
+</div>
+
+<div id="main-wrapper">
+    <div class="main-content">
 
 <section id="research">
  <div class="content-header">
   <h1>Research projects</h1>
 </div>
 <h2 class="title">Research and collaborations</h2>
-    
+
 <div class="section-content">
     <ul> [2018 -> ] Control4Reuse: Process control technologies for water reuse (<a href="http://www.waterjpi.eu/joint-calls/joint-call-2017-ic4water/booklet/control4reuse-1" target="_blank">WaterJPI</a>; Sweden, France, Brazil)</ul>
     <ul> [2015 -> ] Advanced process control for the optimal operation of wastewater treatment plants (Brazil, Finland) </ul>
@@ -227,6 +238,9 @@
   <ul>
    <li>H. Haimi, M. Mulas,  K. Sahlstedt, R. Vahala Advanced operation and control methods of municipal wastewater treatment processes in Finland. TKK Water and Wastewater Engineering Publication. ISBN 978-951-22-9975-1, 2009.
   </ul>
+</div>
+</div>
+</div>
 </div>
 
 </body>
