--- a/teaching.html
+++ b/teaching.html
@@ -58,9 +58,9 @@
                         <ul> [2016 -> ] <a href="https://mycourses.aalto.fi/course/view.php?id=22585" target="_blank">WAT-E2130:</a> Modelling and control of water and wastewater processes (Aalto, postgrad) </ul>
                         <ul> [2016 -> ] TI0111: Statistics for engineers (UFC, undergrad) </li> </ul>
                         <ul> [2017 -> ]TI0118: Introduction to control systems (UFC, undergrad) </ul>
-                        <ul> [2017 -> ] TI0077: Applied computational intelligence to control (UFC, undergrad) </ul>
+                        <ul> [2017 -> ] TI0077: Applied computational intelligence (UFC, undergrad) </ul>
                         <ul> [2017 -> ] TI0090: Intelligent systems for control (UFC, undergrad) </ul>
-                        <ul> [2017 -> ] TIP7077: Applied computational intelligence to control (UFC, postgrad) </ul>
+                        <ul> [2017 -> ] TIP7077: Applied computational intelligence (UFC, postgrad) </ul>
                     </div>
                     
                     <h2 class="title"> Intensive courses organization and teaching </h2>
